adjusted and fixed the overflow problem

--- a/src/pages/About/about.css
+++ b/src/pages/About/about.css
@@ -47,5 +47,10 @@
 .project {
   font-size: larger;
 }
-
+body {
+  overflow: hidden;
+}
+.contentlay {
+  overflow-y: auto;
+}
 /*# sourceMappingURL=about.css.map */
